# tuw_trinamic

./: .gitignore  README.md
tuw_trinamic/: CMakeLists.txt  package.xml
tuw_trinamic_controller/: CMakeLists.txt  package.xml  setup.py
tuw_trinamic_controller/cfg/: annoy.yaml  trinamic_TMCM_1640.cfg  trinamic_TMCM_1640.yaml
tuw_trinamic_controller/launch/: iwos_controller.launch  iwos_steering_velocity_controller.launch  trinamic_controller_iwos.launch  trinamic_controller_node_iwos.launch
tuw_trinamic_controller/src/tuw_trinamic_controller/: motor_configuration.py  motor_configuration_tool.py  motor_controller_node  motor_setup_tool.py  trinamic_controller_node  velocity_controller_node
tuw_trinamic_controller/src/tuw_trinamic_controller/config/: abstract_comparable_config.py  abstract_default_config.py  abstract_dynamic_config.py  abstract_trinamic_config.py  config_file_reader.py  trinamic_TMCM_1640_config.py
tuw_trinamic_controller/src/tuw_trinamic_controller/configuration/: motor_configuration_tool.py
tuw_trinamic_controller/src/tuw_trinamic_controller/connection/: abstract_trinamic_connection.py  connection_handler.py  trinamic_TMCM_1640_connection.py
tuw_trinamic_controller/src/tuw_trinamic_controller/device/: configuration.py  configuration_tool.py  motor.py  wheel.py
tuw_trinamic_controller/src/tuw_trinamic_controller/exception/: invalid_configuration_exception.py  invalid_path_exception.py
tuw_trinamic_controller/src/tuw_trinamic_controller/setup/: motor_setup_tool.py
tuw_trinamic_iwos_revolute_controller/: CMakeLists.txt  package.xml  setup.py
tuw_trinamic_iwos_revolute_controller/cfg/: config_node.yaml  config_revolute.yaml  reconfigure_node.cfg  reconfigure_revolute.cfg  reconfigure_trinamic.cfg
tuw_trinamic_iwos_revolute_controller/launch/: iwos_revolute_controller.launch
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/: revolute_controller_node
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/config/: abstract_dynamic_config.py  abstract_file_config.py  config_handler.py  node_config.py  revolute_config.py  trinamic_config.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/config/abstract/: default_config.py  dynamic_config.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/config/specific_config/: node_config.py  trinamic_config.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/config_handler/: config_handler.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/connection/: connection_handler.py  revolute_connection.py  trinamic_connection.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/connection/specific_connection/: trinamic_connection.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/connection_handler/: connection_handler.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/device/: configuration_tool.py  motor.py  wheel.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/exception/: invalid_config_exception.py  invalid_configuration_exception.py  invalid_file_exception.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/file_handler/: file_handler.py
tuw_trinamic_iwos_revolute_controller/src/tuw_trinamic_iwos_revolute_controller/state_publisher/: state_publisher.py
tuw_trinamic_iwos_velocity_controller/: CMakeLists.txt  package.xml  setup.py
tuw_trinamic_iwos_velocity_controller/launch/: iwos_velocity_controller.launch
tuw_trinamic_iwos_velocity_controller/src/tuw_trinamic_iwos_velocity_controller/: velocity_controller_node
tuw_trinamic_iwos_velocity_controller/src/tuw_trinamic_iwos_velocity_controller/device/: configuration_tool.py  motor.py  wheel.py
