<?xml version="1.0"?>
<package format="2">

  <name>tuw_trinamic</name>
  <version>0.0.0</version>
  <description>Tools for independent trinamic modules.</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
