<?xml version="1.0"?>
<package format="2">

  <name>tuw_trinamic_controller</name>
  <version>0.0.0</version>
  <description>Controller for trinamic modules</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>python3-pytrinamic-pip</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>tuw_nav_msgs</depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
