<?xml version="1.0"?>
<package format="2">

  <name>tuw_trinamic_iwos_revolute_controller</name>
  <version>0.0.0</version>
  <description>Controller for IWOS robot trinamic module (TMCM-1640)</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <!-- pull request pending for this dependency to become part of rosdistro/rosdep/python.yaml -->
  <exec_depend>python3-pytrinamic-pip</exec_depend>

  <!-- pull request outstanding for this dependency to become part of rosdistro/noetic/distributions.yaml -->
  <depend>tuw_nav_msgs</depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
